--- a/src/assets/scss/styles.css
+++ b/src/assets/scss/styles.css
@@ -34,30 +34,27 @@ h1 {
 .nav {
   list-style: none;
   display: flex;
-  gap: 30px;
+  gap: 24px;
   align-items: center;
 }
 
 .nav-item {
-  padding: 0.25rem 0.5rem;
-}
-.nav-item:last-child {
-  padding-right: 0;
-}
-.nav-link {
+  padding: 0.5rem 1rem;
   color: #9ca3af;
   cursor: pointer;
   font-size: 1.5rem;
-
-  text-decoration: none;
+  border-radius: 10px;
 }
-.nav-link:hover {
+
+.nav-item.active {
+  background-color: rgb(15 23 42);
+}
+
+.nav-item:hover {
   color: #e6e6e6;
   cursor: pointer;
 }
-.nav-link:active {
-  background-color: rgb(15 23 42);
-}
+
 .input {
   margin-top: 26px;
   margin-bottom: 26px;
@@ -70,6 +67,7 @@ h1 {
   padding: 0.75rem;
   background-color: transparent;
   border-width: 0;
+  color: #9ca3af;
 
   -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
   -moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
@@ -77,10 +75,20 @@ h1 {
   border-bottom: 2px solid rgb(15 23 42);
   flex: 1 0 75%;
 }
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #9ca3af;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #9ca3af;
+}
 .add-btn {
   cursor: pointer;
   flex: 1 1;
-  border-radius: 10%;
+  border-radius: 10px;
   color: #9ca3af;
   padding: 1rem 2rem;
   border: none;
